# meta-trader-zeromq

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
docs/: Building-and-Testing.md  Home.md  Installation.md  MQL-API.md  _Sidebar.md
examples/mt4/: publisher.mq4  subscriber.mq4
examples/mt5/: publisher.mq5  subscriber.mq5
include/: zmq_bind.mqh  zmq_native.mqh
scripts/: package_release.ps1  run_cross_arch_test.ps1  verify_pe_architecture.ps1
tests/: MANUAL_TEST_MATRIX.md  c_header_smoke.c  cross_arch_peer.cpp  failure_injection.h  native_smoke.cpp
wrap/windows/: zmq_bind.cpp  zmq_bind.h  zmq_bind_win32.def  zmq_bind_x64.def
